# PaperRadar-Agent

./: .gitignore  README.md  langgraph.json  remark.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  document_selection.py  graph.py  state.py
backend/app/agents/nodes/: __init__.py  generator.py  grader.py  hallucination_checker.py  retriever.py  router.py  synthesizer.py
backend/app/models/: schemas.py
backend/app/services/: embeddings.py  llm_provider.py  memory_store.py  paper_classifier.py  paper_fetcher.py  paper_roles.py
backend/scripts/: smoke_api_non_rag_topic_quality.py  smoke_api_report_quality.py  smoke_graph_rec_quality.py  smoke_paper_radar.py  smoke_provider.py  smoke_real_retrieval.py  smoke_report_quality.py
backend/tests/: test_api.py  test_grader.py  test_graph_output_controls.py  test_langgraph_studio.py  test_memory.py  test_no_internal_terms_in_answer.py  test_paper_classifier.py  test_paper_radar.py  test_provider.py  test_report_quality.py
docs/: PAPER_RADAR.md
frontend/: package-lock.json  package.json
frontend/app/: error.tsx  layout.tsx  page.tsx
frontend/components/: account-settings.tsx  answer-panel.tsx  chat-history-sidebar.tsx  chat-thread.tsx  header.tsx  paper-card.tsx  search-bar.tsx  source-list.tsx  thinking-steps.tsx
frontend/lib/: api.ts  types.ts
frontend/scripts/: check-homepage.js
